--- a/.github/workflows/wf-lint-test-deploy-onpush.yml
+++ b/.github/workflows/wf-lint-test-deploy-onpush.yml
@@ -1,7 +1,7 @@
 name: lint-test-deploy-onpush
 on: push
 jobs:
-  lint:
+  lint-test-build:
     runs-on: ubuntu-latest
     steps:
     - name: Get code
